<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Openpyn</string>
    <string name="action_settings">Settings</string>
    <string name="no_data" tools:keep="@string/no_data">-</string>
    <string name="empty" />
    <string name="menu_refresh">Refresh</string>
    <string name="menu_github">GitHub</string>
    <string name="menu_about">About</string>
    <string name="menu_licenses">Licenses</string>
    <string name="warning_must_restart_app">Please restart app for changes to take effect</string>
    <string name="error_must_enable_permissions">Must enable permissions!</string>
    <string name="error_couldnt_connect_to_service">Could not connect to JuiceSSH Plugin Service</string>
    <string name="multi_select_dialog_hint">Search</string>
    <string name="title_temp" tools:keep="@string/title_temp">Temperature</string>
    <string name="title_fan_speed" tools:keep="@string/title_fan_speed">Fan Speed</string>
    <string name="title_clocks" tools:keep="@string/title_clocks">Clocks</string>
    <string name="title_graphics_clock" tools:keep="@string/title_graphics_clock">Graphics</string>
    <string name="title_video_clock" tools:keep="@string/title_video_clock">Video</string>
    <string name="title_memory_clock" tools:keep="@string/title_memory_clock">Memory</string>
    <string name="title_power" tools:keep="@string/title_power">Power</string>
    <string name="title_memory" tools:keep="@string/title_memory">Memory</string>
    <string name="title_mem_free" tools:keep="@string/title_mem_free">Free</string>
    <string name="title_mem_used" tools:keep="@string/title_mem_used">Used</string>
    <string name="error_must_install_juicessh">Must install the JuiceSSH app!</string>
    <string name="error_must_have_atleast_one_server">Must have at least one server!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="pref_header_settings">Settings</string>
    <string name="pref_category_basic">Basics</string>
    <string name="pref_server">Server Name</string>
    <string name="pref_country">Country</string>
    <string-array name="pref_country_entries">
        <item>Albania</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Egypt</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Latvia</item>
        <item>Luxembourg</item>
        <item>Macedonia</item>
        <item>Malaysia</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Vietnam</item>
    </string-array>
    <string-array name="pref_country_values">
        <item>al</item>
        <item>ar</item>
        <item>au</item>
        <item>at</item>
        <item>az</item>
        <item>be</item>
        <item>ba</item>
        <item>br</item>
        <item>bg</item>
        <item>ca</item>
        <item>cl</item>
        <item>cr</item>
        <item>hr</item>
        <item>cy</item>
        <item>cz</item>
        <item>dk</item>
        <item>eg</item>
        <item>ee</item>
        <item>fi</item>
        <item>fr</item>
        <item>ge</item>
        <item>de</item>
        <item>gr</item>
        <item>hk</item>
        <item>hu</item>
        <item>is</item>
        <item>in</item>
        <item>id</item>
        <item>ie</item>
        <item>il</item>
        <item>it</item>
        <item>jp</item>
        <item>lv</item>
        <item>lu</item>
        <item>mk</item>
        <item>my</item>
        <item>mx</item>
        <item>md</item>
        <item>nl</item>
        <item>nz</item>
        <item>no</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>ru</item>
        <item>rs</item>
        <item>sg</item>
        <item>sk</item>
        <item>si</item>
        <item>za</item>
        <item>kr</item>
        <item>es</item>
        <item>se</item>
        <item>ch</item>
        <item>tw</item>
        <item>th</item>
        <item>tr</item>
        <item>ua</item>
        <item>ae</item>
        <item>gb</item>
        <item>us</item>
        <item>vn</item>
    </string-array>
    <string name="pref_tcp">TCP</string>
    <string name="pref_description_tcp">Port 443</string>
    <string name="pref_description_udp">Port 1194 (UDP)</string>
    <string name="pref_max_load">Max Load</string>
    <string-array name="pref_max_load_entries">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
    </string-array>
    <string-array name="pref_max_load_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
    </string-array>
    <string name="pref_top_servers">Top Servers</string>
    <string-array name="pref_top_servers_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="pref_top_servers_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string name="pref_pings">Pings</string>
    <string-array name="pref_pings_entries">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="pref_pings_values">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_p2p">P2P</string>
    <string name="pref_description_p2p">Look for \“Peer To Peer\” servers</string>
    <string name="pref_dedicated">Dedicated IP</string>
    <string name="pref_description_dedicated">Look for \“Dedicated IP\” servers</string>
    <string name="pref_double">Double VPN</string>
    <string name="pref_description_double">Look for \“Double VPN\” servers</string>
    <string name="pref_tor">Onion Over VPN</string>
    <string name="pref_description_tor">Look for \“Onion Over VPN\” servers</string>
    <string name="pref_anti_ddos">Obfuscated</string>
    <string name="pref_description_anti_ddos">Look for \“Obfuscated\” servers</string>
    <string name="pref_netflix">Netflix</string>
    <string name="pref_description_netflix">Only look for \“Netflix\” servers</string>
    <string name="pref_category_expert">Expert</string>
    <string name="pref_test">Test</string>
    <string name="pref_description_test">Simulation only, do not actually connect to the VPN server</string>
    <string name="pref_skip_dns_patch">Skip DNS Patching</string>
    <string name="pref_description_skip_dns_patch">Skips DNS patching, leaves /etc/resolv.conf untouched</string>
    <string name="pref_force_fw">Enforce Firewall Rules</string>
    <string name="pref_description_force_fw">Drop traffic when tunnel breaks, force disable DNS traffic going to any other interface</string>
    <string name="pref_nvram">NVRAM</string>
    <string name="pref_description_nvram">Specify client to save configuration to NVRAM (ASUSWRT-Merlin)</string>
    <string name="pref_nvram_client">NVRAM Client</string>
    <string-array name="pref_nvram_client_entries">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="pref_nvram_client_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="pref_silent">Silent</string>
    <string name="pref_description_silent">Do not try to send notifications. Use if \“libnotify\” or \“gi\” are not available</string>
    <string name="is_tor">is_tor</string>
    <string name="is_proxy">is_proxy</string>
    <string name="is_anonymous">is_anonymous</string>
    <string name="is_known_attacker">is_known_attacker</string>
    <string name="is_known_abuser">is_known_abuser</string>
    <string name="is_threat">is_threat</string>
    <string name="is_bogon">is_bogon</string>
    <string name="pref_category_geolocation">Geolocation API</string>
    <string name="pref_geo">GeoIP</string>
    <string name="pref_description_geolocation">Specify service to use to determine current location based on public IP address</string>
    <string name="pref_geo_client">GeoIP Service</string>
    <string-array name="pref_geo_client_entries">
        <item>IPApi</item>
        <item>IPData (requires API Key)</item>
        <item>IPInfo</item>
        <item>IPStack (requires API Key)</item>
    </string-array>
    <string-array name="pref_geo_client_values">
        <item>ipapi</item>
        <item>ipdata</item>
        <item>ipinfo</item>
        <item>ipstack</item>
    </string-array>
    <string name="pref_category_api_keys">API keys</string>
    <string name="pref_api_ipdata">IPData</string>
    <string name="pref_api_ipinfo">IPInfo</string>
    <string name="pref_api_ipstack">IPStack</string>
    <string name="egab_leave_review">Leave Review</string>
    <string name="egab_contact_support">Contact Us</string>
    <string name="egab_try_other_apps">Try Other Apps</string>
    <string name="egab_version">Version</string>
    <string name="egab_author">Author</string>
    <string name="egab_facebook_label">Facebook</string>
    <string name="egab_twitter_label">Twitter</string>
    <string name="egab_web_label">Web</string>
    <string name="egab_acknowledgements">Acknowledgements</string>
    <string name="egab_privacy_policy">Privacy Policy</string>
    <string name="egab_about_screen_title">About</string>
    <string name="egab_share">Share</string>
    <string name="egab_contact_log_event">Contact</string>
    <string name="egab_review_log_event">Review</string>
    <string name="egab_share_log_event">Share</string>
    <string name="egab_try_other_app_log_event">Try Other Apps</string>
    <string name="egab_facebook_log_event">Facebook</string>
    <string name="pref_log_level">Logging Level</string>
</resources>