<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/title_activity_settings">
    <PreferenceCategory android:title="@string/pref_category_basic">
        <EditTextPreference
            android:key="pref_server"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_server" />
        <ListPreference
            android:defaultValue="gb"
            android:entries="@array/pref_country_entries"
            android:entryValues="@array/pref_country_values"
            android:key="pref_country"
            android:title="@string/pref_country" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_tcp"
            android:summaryOff="@string/pref_description_udp"
            android:summaryOn="@string/pref_description_tcp"
            android:title="@string/pref_tcp" />
        <ListPreference
            android:defaultValue="70"
            android:entries="@array/pref_max_load_entries"
            android:entryValues="@array/pref_max_load_values"
            android:key="pref_max_load"
            android:title="@string/pref_max_load" />
        <ListPreference
            android:defaultValue="10"
            android:entries="@array/pref_top_servers_entries"
            android:entryValues="@array/pref_top_servers_values"
            android:key="pref_top_servers"
            android:title="@string/pref_top_servers" />
        <ListPreference
            android:defaultValue="3"
            android:entries="@array/pref_pings_entries"
            android:entryValues="@array/pref_pings_values"
            android:key="pref_pings"
            android:title="@string/pref_pings" />
        <ListPreference
            android:defaultValue="25"
            android:entries="@array/pref_log_level_entries"
            android:entryValues="@array/pref_log_level_values"
            android:key="pref_log_level"
            android:title="@string/pref_log_level" />
        <Preference
            android:title="@string/title_activity_apis"
            app:fragment="io.github.getsixtyfour.openpyn.fragment.ApiPreferenceFragment" />
        <Preference
            android:title="@string/title_activity_about"
            app:fragment="io.github.getsixtyfour.openpyn.fragment.AboutPreferenceFragment" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_advanced">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_test"
            android:summary="@string/pref_description_test"
            android:title="@string/pref_test" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_silent"
            android:summary="@string/pref_description_silent"
            android:title="@string/pref_silent" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_netflix"
            android:key="pref_p2p"
            android:summary="@string/pref_description_p2p"
            android:title="@string/pref_p2p" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_netflix"
            android:key="pref_dedicated"
            android:summary="@string/pref_description_dedicated"
            android:title="@string/pref_dedicated" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_netflix"
            android:key="pref_double"
            android:summary="@string/pref_description_double"
            android:title="@string/pref_double" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_netflix"
            android:key="pref_tor"
            android:summary="@string/pref_description_tor"
            android:title="@string/pref_tor" />
        <SwitchPreference
            android:defaultValue="false"
            android:dependency="pref_netflix"
            android:key="pref_anti_ddos"
            android:summary="@string/pref_description_anti_ddos"
            android:title="@string/pref_anti_ddos" />
        <SwitchPreference
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:key="pref_netflix"
            android:summary="@string/pref_description_netflix"
            android:title="@string/pref_netflix" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_expert">
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_skip_dns_patch"
            android:summary="@string/pref_description_skip_dns_patch"
            android:title="@string/pref_skip_dns_patch" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_force_fw"
            android:summary="@string/pref_description_force_fw"
            android:title="@string/pref_force_fw" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_nvram"
            android:summary="@string/pref_description_nvram"
            android:title="@string/pref_nvram" />
        <ListPreference
            android:defaultValue="5"
            android:dependency="pref_nvram"
            android:entries="@array/pref_nvram_client_entries"
            android:entryValues="@array/pref_nvram_client_values"
            android:key="pref_nvram_client"
            android:title="@string/pref_nvram_client" />
    </PreferenceCategory>
</PreferenceScreen>
